# murakumo

./: .gitignore  Cargo.toml  README.md
examples/: absolute_simplest.ku  bad_tokens.ku  block_assign.ku  ill_typed.ku  nested_blocks.ku  nested_funcs.ku  parse_it.ku  parse_test10.ku  parse_test11.ku  parse_test13.ku  parse_test2.ku  parse_test3.ku  parse_test4.ku  parse_test5.ku  parse_test6.ku  parse_test7.ku  parse_test8.ku  parse_test9.ku  simple.ku  simpler.ku  simplest.ku
src/: ast.rs  error.rs  grammar.pest  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  typing.rs  unify.rs
tests/: parser.rs
tests/parser_json/: eval_order.json  simple.json
tests/test_progs/: branching.ku  eval_order.ku  simple.ku
