[package]
name = "murakumo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slab = "0.4.10"
slotmap = { version = "1.0.7", features = ["serde"] }
smallvec = { version = "1.15.0", features = ["serde"] }
ustr = { version = "1.1.0", features = ["serde"] }
